Fixed JXC build for JPMS. Removed nb-javac-api dependency from JXC.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>